welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:8: error: ';' expected but 'for' found.
}for (i <- 1 to hauteur)
 ^